add webpack, need to add babel-node to webServe NPM script bc now using ES6 module syntax

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
   zv_dev_starter kit
+
+  <!-- whole point is that we can use the NPM pkg 'numeral' and have it sent down for use on the client-side -->
+  <script src="bundle.js"></script>
+
 </body>
 </html>
