--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>zv_dev_starter kit</title>
 </head>
 <body>
-  zv_dev_starter kit
+  <h1>zv_dev_starter kit</h1>
 
   <!-- whole point is that we can use the NPM pkg 'numeral' and have it sent down for use on the client-side -->
   <script src="bundle.js"></script>
