--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,19 @@
 <body>
   <h1>zv_dev_starter kit</h1>
 
+  <table>
+    <thead>
+      <th>&nbsp;</th>
+      <th>Id</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+    </thead>
+    <tbody id="users">
+
+    </tbody>
+  </table>
+
   <!-- whole point is that we can use the NPM pkg 'numeral' and have it sent down for use on the client-side -->
   <script src="bundle.js"></script>
 
